# SQLite-Lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: client.rs  mod.rs  prompt.rs  provider.rs  registry.rs
src-tauri/src/ai/providers/: anthropic.rs  google.rs  openai.rs
src-tauri/src/commands/: ai.rs  config.rs  database.rs  export.rs  mod.rs  query.rs
src-tauri/src/config/: types.rs
src-tauri/src/database/: connection.rs  query.rs  schema.rs  types.rs
src-tauri/src/export/: csv_export.rs  excel_export.rs  json_export.rs
src/components/layout/: AppLayout.tsx  DatabaseTabBar.tsx  Sidebar.tsx  SplitPane.tsx  StatusBar.tsx  TitleBar.tsx
src/components/shared/: DropOverlay.tsx  (+3 more)
src/hooks/: useAi.ts  useDatabase.ts  useDragDrop.ts  useKeyboardShortcut.ts  useRecentFiles.ts  useTheme.ts
src/services/: ai.ts  config.ts  database.ts  edit.ts  export.ts  query.ts
src/stores/: aiStore.ts  databaseStore.ts  editStore.ts  settingsStore.ts  sqlEditorStore.ts  sqlHistoryStore.ts  tableStore.ts  uiStore.ts
src/types/: ai.ts  config.ts  database.ts  query.ts
src/utils/: file.ts  format.ts  sql.ts
(+43 files in other folders)
